[package]
name = "cf-gears-toolkit-gts"
version = "0.1.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit GTS integration — link-time inventory of shipped GTS schemas and instances plus a small set of platform base types"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "toolkit_gts"

[lints]
workspace = true

[dependencies]
# Workspace deps
toolkit-gts-macros = { workspace = true }
gts = { workspace = true }
gts-macros = { workspace = true }

# Core
anyhow = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
