[package]
name = "cf-gears-toolkit-macros"
version = "0.6.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit macros"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["development-tools::procedural-macro-helpers"]
metadata.docs.rs.all-features = true

[lib]
proc-macro = true
name = "toolkit_macros"

[lints]
workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
heck = { workspace = true }
strsim = { workspace = true }
