[package]
name = "cf-gears-toolkit-security"
version = "0.7.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit security library"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["authentication"]
metadata.docs.rs.all-features = true

[lib]
name = "toolkit_security"

[lints]
workspace = true

[dependencies]
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true }
postcard = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
trybuild = { workspace = true }
