[package]
name = "cf-gears-toolkit-transport-grpc"
version = "0.6.6"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit gRPC transport library"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["network-programming"]
metadata.docs.rs.all-features = true

[lib]
name = "toolkit_transport_grpc"

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
toolkit-security = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
