[package]
name = "cf-chat-engine-sdk"
description = "SDK for chat-engine: plugin traits, models, and errors"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["constructorfabric", "cf-gears"]
categories = ["artificial-intelligence"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "chat_engine_sdk"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
