[package]
name = "cf-gears-credstore-sdk"
description = "SDK for credstore gear: API traits, models, and error definitions"
version = "0.1.26"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-system"]
categories = ["security"]
metadata.docs.rs.all-features = true

[lib]
name = "credstore_sdk"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# GTS types
gts = { workspace = true }
toolkit-gts = { workspace = true }

# ToolKit dependencies
toolkit = { workspace = true }
toolkit-security = { workspace = true }

# Domain types owned by tenant-resolver
tenant-resolver-sdk = { workspace = true }
