[package]
name = "cf-gears-gear-orchestrator"
version = "0.1.27"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Gear Orchestrator - system gear for service discovery and module management"
repository.workspace = true
readme = "README.md"
keywords = ["constructorfabric", "cf-gears"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "gear_orchestrator"

[lints]
workspace = true

[dependencies]
cf-gears-system-sdks = { workspace = true, features = ["directory_grpc"] }
toolkit = { workspace = true }
toolkit-macros = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
api_gateway = { path = "../api-gateway", package = "cf-gears-api-gateway" }
serde_json = { workspace = true }
